# crew-initial-hld-builder

./: README.md  pyproject.toml
output/: hld_crew_output.txt
src/hld_builder/: crew.py  main.py
src/hld_builder/config/: agents.yaml  tasks.yaml
